frontend/test/should_pass/boolean_filter.grg
test t
{
---
	def var b:boolean;
} \ orderAscendingBy<b>

rule apply
{
	modify {
	---
		exec([t\orderAscendingBy<b>]);
	}
}