frontend/test/should_fail/typeof_002.grg
test r {
    a:typeof(b);
    b:typeof(a);
}
